# vkd3d-proton-wcp

./: .upstream-commit  VP_D3D12_VKD3D_PROTON_profile.json  meson_options.txt
.github/workflows/: artifacts-arm64ec.yml  artifacts.yml  sync-upstream.yml
docs/: adreno.md
libs/vkd3d/: adreno_quirks.h  command.c  device.c  raytracing_pipeline.c  resource.c  state.c  swapchain.c  vkd3d_private.h  workgraphs.c
libs/vkd3d-shader/: dxil.c
